# matyan-ui

./: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  LICENSE  MAINTENANCE.md  NOTICE  README.md  pyproject.toml
.github/workflows/: release.yml
src/matyan_ui/: __init__.py  _config.py  _server.py  _utils.py
web/: config-overrides.js  package-lock.json  package.json
web/public/: index.html  manifest.json  matyan_ui_core.py
web/src/: App.tsx
web/src/components/AudioPlayer/: AudioPlayer.tsx
web/src/components/AutocompleteInput/: AutocompleteInput.tsx
web/src/components/CodeBlock/: CodeBlock.tsx
web/src/components/GroupingItem/: GroupingItem.scss
web/src/components/GroupingPopover/: GroupingPopover.tsx
web/src/components/HighPlot/: HighPlot.scss
web/src/components/Illustration/: config.tsx
web/src/components/MediaList/: MediaList.d.ts  MediaList.tsx
web/src/components/MediaPanel/: MediaPanel.d.ts  MediaPanel.scss  MediaPanel.tsx
web/src/components/MediaSet/: MediaSet.d.ts  MediaSet.scss  MediaSet.tsx  mediaSetContentUtils.ts
web/src/components/RangePanel/: RangePanel.tsx
web/src/components/SelectFormActions/: SelectFormActions.scss  SelectFormActions.tsx
web/src/components/SideBar/: SideBar.tsx  Sidebar.scss
web/src/components/Table/: StopModal.tsx  (+1 more)
web/src/config/: config.ts
web/src/hooks/: useCopy.ts
web/src/services/: analytics.ts
web/src/stories/: Separator.stories.tsx  Toast.stories.tsx
web/src/utils/: decodeWithBase58Checker.ts  isMetricHash.ts
web/tasks/: gzip-build.js  index-html-template-generator.js
(+152 files in other folders)
