[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.12, <4"
name = "matyan-ui"
version = "0.2.0"
description = "Matyan web UI server — serves the React app and static assets"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["experiment-tracking", "ui", "fastapi", "react"]

authors = [
    { name = "Tigran Grigoryan", email = "grigoryan.tigran119@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = ["fastapi~=0.115.12", "uvicorn~=0.34.2", "jinja2~=3.1"]

[project.urls]
Homepage = "https://github.com/4gt-104/matyan-core"
Repository = "https://github.com/4gt-104/matyan-core"
Documentation = "https://4gt-104.github.io/matyan-core/"

[project.scripts]
matyan-ui = "matyan_ui:exec_"

[tool.setuptools.package-data]
"matyan_ui" = ["static/**/*"] # Include static files in the package

[dependency-groups]
dev = ["mypy~=1.15"]
